# nullbt

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
app/sample_data/: 000270.parquet  000660.parquet  005380.parquet  005930.parquet  006400.parquet  012330.parquet  028260.parquet  035420.parquet  035720.parquet  051910.parquet  055550.parquet  068270.parquet  105560.parquet  207940.parquet  373220.parquet  names.json
src/nullbt/: __init__.py  bootstrap.py  data.py  engine.py  entropy.py  indicators.py  metrics.py  rotation.py  signals.py  validation.py
src/nullbt/examples/: __init__.py  adapter.py  base_strategy.py  breakout.py
src/nullbt/explore/: __init__.py  cli.py  report.py  rotation.py  search.py  spec.py
src/nullbt/research/: __init__.py  entropy_placebo.py  regime_gate.py
tests/: test_bootstrap.py  test_cli.py  test_data.py  test_engine.py  test_entropy.py  test_entropy_placebo.py  test_metrics.py  test_regime_gate.py  test_report.py  test_rotation.py  test_search.py  test_signal_library.py  test_smoke.py  test_spec.py  test_strategy_adapter.py  test_validation.py
