[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nullbt"
version = "0.2.0"
description = "Anti-overfitting backtesting engine for Korean equities — your edge is null until proven"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "KsPsD" }]
keywords = [
    "backtesting",
    "quant",
    "korea",
    "krx",
    "kospi",
    "overfitting",
    "walk-forward",
    "deflated-sharpe",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "optuna>=4.0",
    "pandas>=3.0",
    "pyarrow>=15.0",
    "scipy>=1.12",
]

[project.optional-dependencies]
data = ["finance-datareader>=0.9.90"]

[project.scripts]
nullbt = "nullbt.explore.cli:main"

[project.urls]
Homepage = "https://github.com/KsPsD/nullbt"
Issues = "https://github.com/KsPsD/nullbt/issues"

[dependency-groups]
app = [
    "streamlit>=1.59.1",
]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/nullbt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
